@@ -74,9 +74,9 @@ setClass("SnpSuperSet", contains=c("AlleleSet", "SnpSet"))
 ###########################################################################
 ##Summary-level classes - CNP
 ###########################################################################  
-setClass("CNSet", contains="SnpSuperSet",
-	 representation(emissionPr="array",
-			segmentData="RangedData"))
+setClass("CNSet", contains="SnpSuperSet")
+#	 representation(emissionPr="array",
+#			segmentData="RangedData"))
 
 ###########################################################################
 ##SNP-level classes
